resources/css/cart.css
.cart-main {
    display: flex;

    width: 100%;
}

.items-col {
    display: flex;
    flex-direction: column;
    width: 67%;

    padding: 1rem;
    gap: 1rem;
}

.payment-col {
    display: flex;
    flex-direction: column;
    width: 33%;

    margin: 1rem;
    padding: 1rem;
    gap: 0.5rem;
    border: 1px solid var(--color-alt);
}

.payment-col > * {
    margin: 0;
}

@media (aspect-ratio <= 2 / 3) {
    .cart-main {
        flex-direction: column;
    }

    .items-col {
        width: 100%;
    }

    .payment-col {
        width: 100%;
        margin: 0;
    }
}

.cart-item {
    display: flex;
    border: 1px solid var(--color-alt);
    padding: 0.5rem;
    gap: 0.5rem;

    align-items: center;
    justify-content: space-between;

    color: var(--color-text);
    text-decoration: unset;
}

@media (aspect-ratio <= 2 / 3) {
    .cart-item {
        flex-direction: column;
        align-items: flex-start;
    }
}

.item-image {
    width: 3rem;
    height: 3rem;
    object-fit: cover;
}

.item-name {
    font-size: 1.3rem;
    font-weight: 700;

    text-wrap: nowrap;
    overflow: hidden;
    line-height: 1.3;

    min-width: 0;
    max-width: 100%;

    & h2 {
        font-size: 1.3rem;
    }
}

.item-name:hover,
.item-name:focus {
    text-decoration: underline;
}

.item-display {
    display: flex;
    gap: 0.5rem;
    align-items: center;
    min-width: 0;
    max-width: 100%;
}

.item-controls {
    display: flex;
    gap: 1rem;
    align-items: center;
}

.amount-controls {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    background-color: var(--color-alt);
}

.remove-icon {
    width: 1rem;
    height: 1rem;
    margin: 0;
}

.price {
    font-weight: 700;
    font-size: 1.3rem;
    min-width: 5rem;
    flex-shrink: 0;
    text-align: end;
    text-wrap: nowrap;
}

.price-row {
    width: 100%;
    height: fit-content;
    display: flex;
    justify-content: space-between;
}

.price-row > * {
    margin-block: 0;
}

.total-price {
    font-weight: 700;
}

.checkout-link {
    font-weight: 700;
    width: 100%;
    padding: 0.5rem;
    background-color: var(--color-alt);
    text-align: center;
}

